sg.tf
# ------------------------------------------------------------------------------
# Create Security Group (Web & SSH)
# ------------------------------------------------------------------------------

# Define the security group for public subnet
resource "aws_security_group" "sg-web" {
  name        = "Web-SG"
  description = "Allow incoming HTTP connections & SSH access"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  vpc_id = "${aws_vpc.main.id}"

  tags = {
    Name = "Web SG"
  }
}

# ------------------------------------------------------------------------------
# Create Security Group (DB)
# ------------------------------------------------------------------------------

# Define the security group for private subnet
resource "aws_security_group" "sg-db" {
  name        = "DB-SG"
  description = "Allow traffic from public subnet"

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["${var.public_subnet_cidr}"]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["${var.public_subnet_cidr}"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.public_subnet_cidr}"]
  }

  vpc_id = "${aws_vpc.main.id}"

  tags = {
    Name = "DB SG"
  }
}
